--- a/package.json
+++ b/package.json
@@ -1,8 +1,32 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "gatsby": "^2.19.45",
+    "gatsby-awesome-pagination": "^0.3.5",
+    "gatsby-image": "^2.2.44",
+    "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-offline": "^3.0.41",
+    "gatsby-plugin-react-helmet": "^3.1.24",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-wordpress": "^3.2.3",
+    "gatsby-transformer-remark": "^2.7.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -13,19 +37,9 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "gatsby": "^2.20.25",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.12.0"
-  },
-  "devDependencies": {
-    "prettier": "2.0.4"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
