--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.19.45",
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.44",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-manifest": "^2.2.48",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
